<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Txt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="0"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Txt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="0"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt1" />

    <Button
        android:id="@+id/btSum"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="operaciones"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/btRest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt9"
        app:layout_constraintTop_toBottomOf="@+id/btClean" />

    <Button
        android:id="@+id/btClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="#000000"
        android:text="C"
        app:layout_constraintBottom_toTopOf="@+id/btSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt2" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="9"
        app:layout_constraintBaseline_toBaselineOf="@+id/btSum"
        app:layout_constraintEnd_toStartOf="@+id/btSum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt8" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="8"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt9"
        app:layout_constraintEnd_toStartOf="@+id/bt9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt7" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="7"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt8"
        app:layout_constraintEnd_toStartOf="@+id/bt8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="4"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt5"
        app:layout_constraintEnd_toStartOf="@+id/bt5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="5"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt6"
        app:layout_constraintEnd_toStartOf="@+id/bt6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt4" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="6"
        app:layout_constraintBaseline_toBaselineOf="@+id/btRest"
        app:layout_constraintEnd_toStartOf="@+id/btRest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt5" />

    <Button
        android:id="@+id/btRest"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:onClick="operaciones"
        android:text="-"
        app:layout_constraintBottom_toTopOf="@+id/btProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt6"
        app:layout_constraintTop_toBottomOf="@+id/btSum" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btProduct"
        app:layout_constraintEnd_toStartOf="@+id/btProduct"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt2" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt3"
        app:layout_constraintEnd_toStartOf="@+id/bt3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt1" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt2"
        app:layout_constraintEnd_toStartOf="@+id/bt2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btProduct"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:onClick="operaciones"
        android:text="x"
        app:layout_constraintBottom_toTopOf="@+id/btDivition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt3"
        app:layout_constraintTop_toBottomOf="@+id/btRest" />

    <Button
        android:id="@+id/btEqual"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="="
        app:layout_constraintBaseline_toBaselineOf="@+id/btDivition"
        app:layout_constraintEnd_toStartOf="@+id/btDivition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btPoint" />

    <Button
        android:id="@+id/btPoint"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="."
        app:layout_constraintBaseline_toBaselineOf="@+id/btEqual"
        app:layout_constraintEnd_toStartOf="@+id/btEqual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt0" />

    <Button
        android:id="@+id/bt0"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:onClick="oprimirDigitoVisual"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/btPoint"
        app:layout_constraintEnd_toStartOf="@+id/btPoint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btDivition"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:onClick="operaciones"
        android:text="/"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btEqual"
        app:layout_constraintTop_toBottomOf="@+id/btProduct" />

</androidx.constraintlayout.widget.ConstraintLayout>